--- a/forms.html
+++ b/forms.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>БЭМ методология</title>
+    <title>Формы</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -72,23 +72,32 @@
       <div class="main">
         <div class="container">
           <div class="box">
-            <h1 class="box__h1">#1 БЭМ</h1>
-            <p><span class="alert"><a href="https://nicothin.pro/idiomatic-pre-CSS/" target="_blank">Ссылка на статью простым языком</a></span></p>
-            <!-- Пример разметки-->
-            <div class="product-item"><a class="product-item__top" href="#">
-                <div class="product-item__img-wrap"><img class="product-item__img" src="http://images.unsplash.com/photo-1505740420928-5e560c06d30e?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwxMjA3fDB8MXxzZWFyY2h8MXx8cHJvZHVjdHx8MHx8fA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" alt="img"></div>
-                <div class="product-item__badges">
-                  <div class="badge badge--hit">Хит</div>
-                  <div class="badge badge--new">Новинка</div>
-                </div></a>
-              <div class="product-item__bottom"><a class="product-item__title" href="#">Название товара, очеень длинное название, нужно предусмотреть чтобы не ломалась верстка!</a>
-                <div class="product-item__prices">
-                  <div class="product-item__price-current">9,30 руб</div>
-                  <div class="product-item__price-old">14,50 руб</div>
-                </div>
-                <div class="product-item__buy"><a class="btn btn--primary" href="#">Купить</a></div>
-              </div>
-            </div>
+            <h1 class="box__h1">Формы</h1>
+            <h2 class="box__h2">#1 Основы</h2>
+            <dl class="box__term">
+              <dt>&lt;form action="#"&gt;&lt;/form&gt;</dt>
+              <dd>тег используется для создания формы HTML для ввода данных пользователя. Аттрибут action - определяет , куда посылать данные формы , когда форма была отправлена.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;input&gt;&lt;/input&gt;</dt>
+              <dd></dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;textarea&gt;&lt;/textarea&gt;</dt>
+              <dd></dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;select&gt;&lt;/select&gt; и &lt;option&gt;&lt;/option&gt;</dt>
+              <dd></dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;label&gt;&lt;/label&gt;</dt>
+              <dd></dd>
+            </dl>
+            <dl class="box__term">
+              <dt>&lt;button&gt;&lt;/button&gt;</dt>
+              <dd></dd>
+            </dl>
           </div>
         </div>
       </div>
