--- a/devtools.html
+++ b/devtools.html
@@ -41,11 +41,13 @@
               </li>
               <li class="nav__item"><a class="nav__link active" href="flex.html">Flexboxes</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">Адаптив(@media)/mobile first</a>
+              <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">Bootstrap</a>
+              <li class="nav__item"><a class="nav__link" href="">/ Адаптив(@media)/mobile first</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">Gulp</a>
+              <li class="nav__item"><a class="nav__link" href="">/ Bootstrap</a>
+              </li>
+              <li class="nav__item"><a class="nav__link" href="gulp.html">Gulp</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="">Pug</a>
               </li>
