--- a/html_bl_in.html
+++ b/html_bl_in.html
@@ -49,7 +49,9 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="gulp.html">Gulp</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">Pug</a>
+              <li class="nav__item"><a class="nav__link" href="gulp2.html">Работа с сборкой</a>
+              </li>
+              <li class="nav__item"><a class="nav__link" href="pug.html">Pug</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="">SCSS</a>
               </li>
