--- a/gulp2.html
+++ b/gulp2.html
@@ -43,30 +43,30 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">/ Адаптив(@media)/mobile first</a>
+              <li class="nav__item"><a class="nav__link" href="">Адаптив(@media)/mobile first</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">/ Bootstrap</a>
-              </li>
+              <!--+e('li').__item+e('a').__link(href="") Bootstrap
+              -->
               <li class="nav__item"><a class="nav__link" href="gulp.html">Gulp</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="gulp2.html">Работа с сборкой</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="pug.html">Pug</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">SCSS</a>
+              <li class="nav__item"><a class="nav__link" href="scss.html">SCSS</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">SVG-спрайты</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">Кроссбраузерность</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">Fallback</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">Grid</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">CSS-анимации</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">SVG-анимации</a>
-              </li>
+              <!--+e('li').__item+e('a').__link(href="") SVG-спрайты
+              -->
+              <!--+e('li').__item+e('a').__link(href="") Кроссбраузерность
+              -->
+              <!--+e('li').__item+e('a').__link(href="") Fallback
+              -->
+              <!--+e('li').__item+e('a').__link(href="") Grid
+              -->
+              <!--+e('li').__item+e('a').__link(href="") CSS-анимации
+              -->
+              <!--+e('li').__item+e('a').__link(href="") SVG-анимации
+              -->
             </ul>
           </nav>
         </div>
@@ -76,19 +76,20 @@
           <div class="box">
             <h1 class="box__h1">Работа с сборкой</h1>
             <h2 class="box__h2">#1 Базовая работа</h2>
+            <h3 class="box__h3">Для работы над вторым макетом</h3>
             <dl class="box__term">
               <dt>Файл layout.pug</dt>
-              <dd>базовая разметка страницы</dd>
+              <dd>базовая разметка страницы(менять не нужно)</dd>
               <p><img class="box__screen" src="./assets/imgs/pr1.jpg"></p>
             </dl>
             <dl class="box__term">
               <dt>Файл index.pug</dt>
-              <dd>разметка главной страницы</dd>
+              <dd>разметка главной страницы(пишем код html в синтаксисе pug здесь)</dd>
               <p><img class="box__screen" src="./assets/imgs/pr2.jpg"></p>
             </dl>
             <dl class="box__term">
               <dt>Файл app.scss</dt>
-              <dd>стили сайта</dd>
+              <dd>стили сайта(пишем код css в синтаксисе scss здесь)</dd>
               <p><img class="box__screen" src="./assets/imgs/pr3.jpg"></p>
             </dl>
           </div>
