--- a/html_base.html
+++ b/html_base.html
@@ -42,30 +42,30 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">/ Адаптив(@media)/mobile first</a>
+              <li class="nav__item"><a class="nav__link" href="">Адаптив(@media)/mobile first</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">/ Bootstrap</a>
-              </li>
+              <!--+e('li').__item+e('a').__link(href="") Bootstrap
+              -->
               <li class="nav__item"><a class="nav__link" href="gulp.html">Gulp</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="gulp2.html">Работа с сборкой</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="pug.html">Pug</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">SCSS</a>
+              <li class="nav__item"><a class="nav__link" href="scss.html">SCSS</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">SVG-спрайты</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">Кроссбраузерность</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">Fallback</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">Grid</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">CSS-анимации</a>
-              </li>
-              <li class="nav__item"><a class="nav__link" href="">SVG-анимации</a>
-              </li>
+              <!--+e('li').__item+e('a').__link(href="") SVG-спрайты
+              -->
+              <!--+e('li').__item+e('a').__link(href="") Кроссбраузерность
+              -->
+              <!--+e('li').__item+e('a').__link(href="") Fallback
+              -->
+              <!--+e('li').__item+e('a').__link(href="") Grid
+              -->
+              <!--+e('li').__item+e('a').__link(href="") CSS-анимации
+              -->
+              <!--+e('li').__item+e('a').__link(href="") SVG-анимации
+              -->
             </ul>
           </nav>
         </div>
