--- a/scss.html
+++ b/scss.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>Формы</title>
+    <title>SCSS</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -74,32 +74,62 @@
       <div class="main">
         <div class="container">
           <div class="box">
-            <h1 class="box__h1">Формы</h1>
-            <h2 class="box__h2">#1 Основы</h2>
+            <h1 class="box__h1">SCSS</h1>
+            <h2 class="box__h2">#1 Основная информация</h2>
             <dl class="box__term">
-              <dt>&lt;form action="#"&gt;&lt;/form&gt;</dt>
-              <dd>тег используется для создания формы HTML для ввода данных пользователя. Аттрибут action - определяет , куда посылать данные формы , когда форма была отправлена.</dd>
+              <dt>SCSS</dt>
+              <dd>это метаязык на основе CSS, предназначенный для увеличения уровня абстракции CSS кода и упрощения файлов каскадных таблиц стилей.</dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#2 Преимущества SCSS или проблемы CSS</h2>
+            <ul class="box__list">
+              <li>Большие усилия для внесения небольших изменений</li>
+              <li>Трудности при структурировании кода</li>
+              <li>Избыточность кода</li>
+              <li>Бесконечные строки CSS-классов и правил</li>
+            </ul>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#3 Возможности</h2>
+            <dl class="box__term">
+              <dt>Переменные</dt>
+              <dd>В SCSS переменная обозначается знаком доллара ($color: #9c27b0). В переменную можно записать любое значение свойства, не только цвет.</dd>
             </dl>
             <dl class="box__term">
-              <dt>&lt;input&gt;&lt;/input&gt;</dt>
-              <dd></dd>
+              <dt>Вложенные правила</dt>
+              <dd>вы можете вкладывать CSS свойства, в несколько наборов скобок {}. Это сделает ваш CSS чище и понятней.</dd>
+              <dd>+ при компиляции пустые свойства не попадут в итоговый файл</dd>
+              <dd><img class="box__screen" src="./assets/imgs/scss0.jpg"></dd>
             </dl>
             <dl class="box__term">
-              <dt>&lt;textarea&gt;&lt;/textarea&gt;</dt>
-              <dd></dd>
+              <dt>Вложенные правила &</dt>
+              <dd>используя & можно сократить запись. Удобно использовать для написания правил по БЭМ</dd>
+              <dd><img class="box__screen" src="./assets/imgs/scss1.jpg"></dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#4 Расширенные возможности(дополнить)</h2>
+            <dl class="box__term">
+              <dt>Лучшая реализация операторов</dt>
+              <dd>вы можете суммировать, вычитать, делить и умножать CSS значения.</dd>
+              <!--ddimg.box__screen(src="./assets/imgs/scss2.jpg")
+              -->
             </dl>
             <dl class="box__term">
-              <dt>&lt;select&gt;&lt;/select&gt; и &lt;option&gt;&lt;/option&gt;</dt>
-              <dd></dd>
+              <dt>Функции</dt>
+              <dd>позволяет многократно использовать CSS стили, как функции.</dd>
+              <!--ddimg.box__screen(src="./assets/imgs/scss3.jpg")
+              -->
             </dl>
             <dl class="box__term">
-              <dt>&lt;label&gt;&lt;/label&gt;</dt>
-              <dd></dd>
+              <dt>Миксины</dt>
+              <dd>позволяют один раз создать набор правил, чтобы потом использовать их многократно или смешивать с другими правилами. Например, миксины используют для создания отдельных тем макета.</dd>
+              <!--ddimg.box__screen(src="./assets/imgs/scss4.jpg")
+              -->
             </dl>
-            <dl class="box__term">
-              <dt>&lt;button&gt;&lt;/button&gt;</dt>
-              <dd></dd>
-            </dl>
+            <p><span class="alert"><a href="https://medium.com/nuances-of-programming/%D0%BF%D0%BE%D0%BB%D0%BD%D1%8B%D0%B9-%D0%B3%D0%B0%D0%B9%D0%B4-%D0%BF%D0%BE-scss-sass-b09ae0c87afe" target="_blank">Ссылка на отличный гайд на русском</a></span></p>
+            <p><span class="alert"><a href="https://pugjs.org/api/getting-started.html" target="_blank">Ссылка на документацию</a></span></p>
           </div>
         </div>
       </div>
