--- a/gulp.html
+++ b/gulp.html
@@ -106,7 +106,8 @@
             </dl>
             <dl class="box__term">
               <dt>Если не установлен Node.js</dt>
-              <dd>скачиваем с офиц сайта и устанавливаем&nbsp;<a href="https://nodejs.org/en/" target="_blank">https://nodejs.org/en/</a></dd>
+              <dd>скачиваем с офиц сайта и устанавливаем свежую стабильную версию&nbsp;<a href="https://nodejs.org/en/" target="_blank">https://nodejs.org/en/</a></dd>
+              <p><img class="box__screen" src="./assets/imgs/gulp0.jpg"></p>
               <dd>после этого необходимо переоткрыть терминал и снова проверить версию Node.js. Если версия появилась, Node.js установлен.</dd>
               <dd>если вы видите ошибку npm - command not found, вам необходимо установить npm при помощи команды в терминале npm install npm@latest -g</dd>
             </dl>
