--- a/gulp.html
+++ b/gulp.html
@@ -149,6 +149,10 @@
               <li>Запускаем режим для разработки - gulp
                 <p><img class="box__screen" src="./assets/imgs/project12.jpg"></p>
               </li>
+              <li>
+                Если после команды gulp вылезла ошибка как на скрине ниже, то запускаем VSCode от имени админимстратора,вводим команду Set-ExecutionPolicy RemoteSigned и со всем соглашаемся, после снова запускаем команду gulp
+                <p><img class="box__screen" src="./assets/imgs/project_error.jpg"></p>
+              </li>
               <li>После запуска должна открыться вкладка в вашем браузере по умолчанию с запущенной index страницей
                 <p><img class="box__screen" src="./assets/imgs/project14.jpg"></p>
               </li>
