--- a/gulp.html
+++ b/gulp.html
@@ -43,7 +43,7 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">Адаптив(@media)/mobile first</a>
+              <li class="nav__item"><a class="nav__link" href="adaptive.html">Адаптив(@media)/mobile first</a>
               </li>
               <!--+e('li').__item+e('a').__link(href="") Bootstrap
               -->
@@ -153,7 +153,11 @@
                 Если после команды gulp вылезла ошибка как на скрине ниже, то запускаем VSCode от имени админимстратора,вводим команду Set-ExecutionPolicy RemoteSigned и со всем соглашаемся, после снова запускаем команду gulp
                 <p><img class="box__screen" src="./assets/imgs/project_error.jpg"></p>
               </li>
-              <li>После запуска должна открыться вкладка в вашем браузере по умолчанию с запущенной index страницей
+              <li>
+                Если после команды gulp вылезла ошибка как на скрине ниже, то запускаем VSCode от имени админимстратора,вводим рекомендуемую команду npm rebuild node-sass, после снова запускаем команду gulp
+                <p><img class="box__screen" src="./assets/imgs/project_error2.jpg"></p>
+              </li>
+              <li>После успешного запуска должна открыться вкладка в вашем браузере по умолчанию с запущенной index страницей
                 <p><img class="box__screen" src="./assets/imgs/project14.jpg"></p>
               </li>
               <li>Можно писать код :)</li>
@@ -173,7 +177,7 @@
               <li>Проверяем, что пакет с его зависимостями добавлен в проект (Будет сформирована папка node_modules и файл package-lock.json)
                 <p><img class="box__screen" src="./assets/imgs/project8.jpg"></p>
               </li>
-              <li>Дальше нужно добавить все необходимые для работы пакеты, описать</li>
+              <li>Дальше нужно добавить все необходимые для работы пакеты, разметить структуру исходных файлов проекта, написать команды для gulp</li>
             </ul>
           </div>
         </div>
