--- a/adaptive.html
+++ b/adaptive.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>CSS base</title>
+    <title>Media Queries</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -74,181 +74,15 @@
       <div class="main">
         <div class="container">
           <div class="box">
-            <h1 class="box__h1">CSS base</h1>
-            <h2 class="box__h2">#0 Изменение типа элемента, свойство display</h2>
+            <h1 class="box__h1">#1 Media Queries</h1>
+            <h2 class="box__h2">Основные подходы</h2>
             <dl class="box__term">
-              <h3 class="box__h3">Значения свойства</h3>
-              <dt>inline</dt>
-              <dd>чтобы блочный элемент вел себя как inline-элемент (т. е. не переводился на новую строку).</dd>
+              <dt>гибкая/резиновая верстка</dt>
+              <dd></dd>
             </dl>
             <dl class="box__term">
-              <dt>block</dt>
-              <dd>
-                если необходимо отобразить строчный элемент как block-элемент (чтобы до и после элемента происходилперенос строки).</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>inline-block</dt>
-              <dd>
-                «гибрид» — блочный элемент с поведением, как у строчного. В этом случае всё содержимое таких блочных элементовбудет отображаться, как обычно, но при этом блоки будут вести себя как строчные элементы, выстраиваясь в одной
-                строке друг за другом и переносясь на новую строку лишь при необходимости. Схлопывание margin в таких случаях
-                перестает действовать.
-              </dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#1 Единицы измерения</h2>
-            <dl class="box__term">
-              <dt>px(абсолютная)</dt>
-              <dd>размер определяется разрешением экрана.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>rem(относительная)</dt>
-              <dd>% от размера шрифта указанного к тегу html, либо установленного по умолчанию</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>em(относительная)</dt>
-              <dd>% от размера шрифта родительского блока либо страницы</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>%(относительная)</dt>
-              <dd>процент от размера страницы, родительского или текущего блока. зависит от местоположения и св-в элемента к которому применяется</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>vw(относительная)</dt>
-              <dd>определяется от размера ширины окна браузера, 100vw = 100% ширины браузера. При уменьшении ширины окна, уменьшается ширина, высота, шрифт элемента. Шрифт не будет масштабирован при нажатии Ctrl+ или Ctrl-.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>vh(относительная)</dt>
-              <dd>определяется от размера высоты окна браузера, 100vh = 100% высоты браузера.  При уменьшении высоты окна, уменьшается ширина, высота, шрифт элемента. Шрифт не будет масштабирован при нажатии Ctrl+ или Ctrl-.</dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#2 Работа с box-sizing</h2>
-            <h3 class="box__h3">Значения свойства</h3>
-            <dl class="box__term">
-              <dt>content-box (значение по умолчанию в браузере)</dt>
-              <dd>
-                Основывается на стандартах CSS, при этом свойства width и heightзадают ширину и высоту контента и не включают в себя значения отступов,
-                полей и границ
-              </dd>
-              <dd>
-                <div class="test-box__bs-cb">content-box</div>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>border-box (самое часто применяемое на практике)</dt>
-              <dd>
-                Свойства width и height включают в себя значения полей и границ,но не отступов (margin).</dd>
-              <dd>
-                <div class="test-box__bs-bb">border-box</div>
-              </dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#3 Работа с width/height</h2>
-            <dl class="box__term">
-              <dt>Пример работы с width/height px</dt>
-              <dd>
-                <div class="test-box__sizes">300px*50px</div>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример работы с width/height %</dt>
-              <dd>
-                <div class="test-box__sizes2">50%*50px</div>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример работы с width/height vw</dt>
-              <dd>
-                <div class="test-box__sizes3">50vw*50px</div>
-              </dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#4 px rem em % vw vh для текста</h2>
-            <div style="color: #b1b1b1; font-size: 20px;">
-              <p style="font-size: 16px;">Текст 12px</p>
-              <p style="font-size: 2rem;">Текст 2rem (считает от значения в html)</p>
-              <p style="font-size: 2em;">Текст 2em</p>
-              <p style="font-size: 300%;">Текст 300% (от родительского элемента)</p>
-              <p style="font-size: 5vw;">Текст 5vw</p>
-              <p style="font-size: 5vh;">Текст 5vh</p>
-            </div>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#5 Практическое применение em</h2>
-            <h3 class="box__h3">Практическое применение em</h3>
-            <div><a class="btn-test" href="javascript:;">font-size: 16px (какое значение padding у этого элемента?)</a></div>
-            <div><a class="btn-test btn-test--md" href="javascript:;">font-size: 32px; (какое значение padding у этого элемента?)</a></div>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#6 Работа с цветом</h2>
-            <dl class="box__term">
-              <dt>Пример задания цвета именем цвета</dt>
-              <dd>
-                <div class="test-box__color-name">color: red;<br> background: black;</div>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример задания цвета по номеру</dt>
-              <dd>
-                <div class="test-box__color-hex">color: #e6e6e6;<br> background: #000;</div>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример задания прозрачности/полупрозрачности</dt>
-              <dd>
-                <div class="test-box__color-rgba">color: rgba(255, 0, 0, 0.5);<br> background: rgb(0, 0, 0);</div>
-                <div class="test-box__color-rgba2">background: rgba(0,0,0,0.5);</div>
-                <div class="test-box__color-rgba3">background: rgba(0,0,0,0.2);</div>
-              </dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#7 Задание margin/padding/border</h2>
-            <dl class="box__term">
-              <dt>Пример margin(внешние оступы)</dt>
-              <dd>
-                <div class="test-box__margin">см инструменты разработчика margin</div>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример padding(внутренние отступы)</dt>
-              <dd>
-                <div class="test-box__padding">см инструменты разработчика padding</div>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример border(рамка)</dt>
-              <dd>
-                <div class="test-box__border">1px solid</div>
-                <div class="test-box__border2">5px solid</div>
-                <div class="test-box__border3">dashed</div>
-                <div class="test-box__border4">dotted</div>
-                <p><span class="alert">дополнительно все свойства рамок #1 -> <a href="http://htmlbook.ru/css/border" target="_blank">ссылка</a></span></p>
-                <p><span class="alert">дополнительно все свойства рамок #2 -> <a href="https://www.w3schools.com/css/css_border.asp" target="_blank">ссылка</a></span></p>
-              </dd>
-            </dl>
-          </div>
-          <div class="box">
-            <h2 class="box__h2">#8 Margin особенности</h2>
-            <dl class="box__term">
-              <dt>Пример наложения границ соседей(см. инструменты разработчика -> styles)</dt>
-              <dd>
-                <h1 class="test-box__collapse1">Заголовок</h1>
-                <p class="test-box__collapse2">Абзац текста</p>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример вываливания за родительские границы(см. инструменты разработчика -> styles)</dt>
-              <dd>
-                <div class="test-box__collapse3">
-                  <p>Абзац текста</p>
-                  <p>Абзац текста</p>
-                  <p>Абзац текста</p>
-                </div>
-              </dd>
+              <dt>адаптивная верстка</dt>
+              <dd></dd>
             </dl>
           </div>
         </div>
