--- a/forms.html
+++ b/forms.html
@@ -43,7 +43,7 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">Адаптив(@media)/mobile first</a>
+              <li class="nav__item"><a class="nav__link" href="adaptive.html">Адаптив(@media)/mobile first</a>
               </li>
               <!--+e('li').__item+e('a').__link(href="") Bootstrap
               -->
@@ -82,25 +82,199 @@
             </dl>
             <dl class="box__term">
               <dt>&lt;input&gt;&lt;/input&gt;</dt>
-              <dd></dd>
+              <dd>создает большинство полей формы. Атрибуты элемента отличаются в зависимости от типа поля, для создания которого используется этот элемент. С помощью css-стилей можно изменить размер шрифта, тип шрифта, цвет и другие свойства текста, а также добавить границы, цвет фона и фоновое изображение. Ширина поля задается свойством width.</dd>
             </dl>
             <dl class="box__term">
               <dt>&lt;textarea&gt;&lt;/textarea&gt;</dt>
-              <dd></dd>
+              <dd>используется вместо элемента input type="text", когда нужно создать большие текстовые поля. Текст, отображаемый как исходное значение, помещается внутрь тега.</dd>
+              <dd>
+                <textarea placeholder="поле многострочного ввода инфо"></textarea>
+              </dd>
             </dl>
             <dl class="box__term">
               <dt>&lt;select&gt;&lt;/select&gt; и &lt;option&gt;&lt;/option&gt;</dt>
-              <dd></dd>
+              <dd>Списки дают возможность расположить большое количество пунктов компактно. Раскрывающиеся списки создаются при помощи элемента select. Они позволяют выбрать одно или несколько значений из предложенного множества. По умолчанию в поле списка отображается его первый элемент. Для добавления в список пунктов используются элементы option, которые располагаются внутри select.</dd>
+              <dd>
+                <select>
+                  <option>первое значение</option>
+                  <option>второе значение</option>
+                  <option>третье значение</option>
+                  <option>четвертое значение</option>
+                </select>
+              </dd>
+              <dd>
+                <select multiple>
+                  <option>первое значение</option>
+                  <option>второе значение</option>
+                  <option>третье значение</option>
+                  <option>четвертое значение</option>
+                </select>
+              </dd>
             </dl>
             <dl class="box__term">
               <dt>&lt;label&gt;&lt;/label&gt;</dt>
-              <dd></dd>
+              <dd>Надписи к элементам формы создаются с помощью элемента label. Существует два способа группировки надписи и поля. Если поле находится внутри элемента <label>, то атрибут for указывать не нужно.</dd>
             </dl>
             <dl class="box__term">
               <dt>&lt;button&gt;&lt;/button&gt;</dt>
-              <dd></dd>
+              <dd>создает кликабельные кнопки. В отличие от кнопок, созданных input (input type="submit", input type="image", input type="reset", input type="button"), внутрь элемента button можно поместить контент — текст или изображение. Для корректного отображения элемента button разными браузерами нужно указывать атрибут type, например, button type="submit". Кнопки позволяют пользователям передавать данные в форму, очищать содержимое формы или предпринимать какие-либо другие действия. Можно создавать границы, изменять фон и выравнивать текст на кнопке.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>Пример простой формы #1 (связка for - id)</dt>
+              <dd><img class="box__screen" src="./assets/imgs/form.jpg"></dd>
+              <dd><form action="/action_page.php" method="get">
+<label for="fname">Имя:</label>
+<input type="text" id="fname" name="fname">
+<label for="lname">Фамилия:</label>
+<input type="text" id="lname" name="lname">
+<input type="submit" value="Отправить">
+</form>
+              </dd>
+            </dl>
+            <dl class="box__term">
+              <dt>Пример простой формы #2 (связка по вложенности)</dt>
+              <dd><img class="box__screen" src="./assets/imgs/form2.jpg"></dd>
+              <dd><form action="/action_page.php" method="get">
+<label class="label">
+<span class="title">Имя:</span>
+<input type="text" name="fname">
+</label>
+<label class="label">
+<span class="title">Фамилия:</span>
+<input type="text" name="lname">
+</label>
+<input type="submit" value="Отправить">
+</form>
+              </dd>
             </dl>
           </div>
+          <div class="box">
+            <h2 class="box__h2">#2 Группировка элементов формы</h2>
+            <dl class="box__term">
+              <dt>&lt;fieldset&gt;&lt;/fieldset&gt;</dt>
+              <dd>предназначен для группировки элементов, связанных друг с другом, разделяя таким образом форму на логические фрагменты.</dd>
+            </dl>
+          </div>
+          <form class="box" action="#">
+            <h2 class="box__h2">#3 Основные значения type для input</h2>
+            <ul class="box__list">
+              <li>
+                <p>type="text" - поле для ввода текстовой информации(значение по умолчанию)</p>
+                <p>
+                  <input type="text">
+                </p>
+              </li>
+              <li>
+                <p>type="email" - поле для ввода email</p>
+                <p>
+                  <input type="email">
+                </p>
+              </li>
+              <li>
+                <p>type="number" - поле для ввода цифр</p>
+                <p>
+                  <input type="number">
+                </p>
+              </li>
+              <li>
+                <p>type="password" - поле для ввода пароля</p>
+                <p>
+                  <input type="password">
+                </p>
+              </li>
+              <li>
+                <p>type="file" - поле для загрузки файлов</p>
+                <p>
+                  <input type="file">
+                </p>
+              </li>
+              <li>
+                <p>type="checkbox" - для группы полей этого типа - можно выбрать только несколько из группы</p>
+                <p>связка в группу по аттрибуту name c одинаковым значением</p>
+                <p>
+                  <input type="checkbox" name="t1">
+                  <input type="checkbox" name="t1">
+                  <input type="checkbox" name="t1">
+                  <input type="checkbox" name="t1">
+                </p>
+              </li>
+              <li>
+                <p>type="radio" - для группы полей этого типа - можно выбрать только один из группы</p>
+                <p>связка в группу по аттрибуту name c одинаковым значением</p>
+                <p>
+                  <input type="radio" name="t2">
+                  <input type="radio" name="t2">
+                  <input type="radio" name="t2">
+                  <input type="radio" name="t2">
+                </p>
+              </li>
+            </ul>
+            <p><span class="alert"><a href="https://www.w3schools.com/html/html_form_input_types.asp" target="_blank">расширенная инфо по всем типам input</a></span></p>
+          </form>
+          <form class="box" action="#">
+            <h2 class="box__h2">#4 Основные аттрибуты для input</h2>
+            <h3 class="box__h3">( Смотрим в инструментах разработчика)</h3>
+            <ul class="box__list">
+              <li>
+                <p>placeholder - задает короткую подсказку, описывающую ожидаемое значение элемента</p>
+                <p>
+                  <input type="text" placeholder="введите имя">
+                </p>
+              </li>
+              <li>
+                <p>value - задает значение элемента по умолчанию</p>
+                <p>
+                  <input type="text" value="Иван Иванов">
+                </p>
+              </li>
+              <li>
+                <p>name - используется для обращения к полю в JavaScript или на данные поля после отправки формы (обязательно для свзяки полей типа checkbox и radio в группу)</p>
+                <p>
+                  <input type="text" name="user_name">
+                </p>
+              </li>
+              <li>
+                <p>readonly - указывает, что поле ввода доступно только для чтения. Эл-т не редактируется, но отправляется при отправке формы, фокусится.</p>
+                <p>
+                  <input type="text" placeholder="введите имя" value="Иван Иванов" readonly>
+                </p>
+              </li>
+              <li>
+                <p>required - обязательное для заполнения поле, форма не будет отправлена пока поле не заполнено</p>
+                <p>
+                  <input type="text" placeholder="введите имя" required>
+                </p>
+              </li>
+              <li>
+                <p>checked - указывает, что элемент input должен быть предварительно выбран при загрузке страницы (для type="checkbox" или type="radio")</p>
+                <p>
+                  <input type="checkbox" name="t3">
+                  <input type="checkbox" name="t3" checked>
+                  <input type="checkbox" name="t3" checked>
+                  <input type="checkbox" name="t3">
+                </p>
+                <p>
+                  <input type="radio" name="t4">
+                  <input type="radio" name="t4">
+                  <input type="radio" name="t4" checked>
+                  <input type="radio" name="t4">
+                </p>
+              </li>
+              <li>
+                <p>disabled - указывает, что элемент input должен отключен. Эл-т не редактируется и не отправляется при отправке формы, не фокусится.</p>
+                <p>
+                  <input type="text" value="Иван Иванов" disabled>
+                </p>
+              </li>
+              <li>
+                <p>multiple - указывает, что пользователь может ввести более одного значения в элемент (например прикрепить несколько файлов в поле типа file, или для select)</p>
+                <p>
+                  <input type="file" multiple>
+                </p>
+              </li>
+            </ul>
+            <p><span class="alert"><a href="https://www.w3schools.com/tags/tag_input.asp" target="_blank">расширенная инфо по всем аттрибутам input</a></span></p>
+          </form>
         </div>
       </div>
       <footer class="footer">
