--- a/html_base.html
+++ b/html_base.html
@@ -42,7 +42,7 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="">Адаптив(@media)/mobile first</a>
+              <li class="nav__item"><a class="nav__link" href="adaptive.html">Адаптив(@media)/mobile first</a>
               </li>
               <!--+e('li').__item+e('a').__link(href="") Bootstrap
               -->
