--- a/crossbr.html
+++ b/crossbr.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>Формы</title>
+    <title>Кроссбраузерность</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -94,227 +94,88 @@
       <div class="main">
         <div class="container">
           <div class="box">
-            <h1 class="box__h1">Формы</h1>
-            <h2 class="box__h2">#1 Основы</h2>
+            <h1 class="box__h1">Кроссбраузерность</h1>
+            <h2 class="box__h2">#1 Основная инфо</h2>
             <dl class="box__term">
-              <dt>&lt;form action="#"&gt;&lt;/form&gt;</dt>
-              <dd>тег используется для создания формы HTML для ввода данных пользователя. Аттрибут action - определяет , куда посылать данные формы , когда форма была отправлена.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;input&gt;&lt;/input&gt;</dt>
-              <dd>создает большинство полей формы. Атрибуты элемента отличаются в зависимости от типа поля, для создания которого используется этот элемент. С помощью css-стилей можно изменить размер шрифта, тип шрифта, цвет и другие свойства текста, а также добавить границы, цвет фона и фоновое изображение. Ширина поля задается свойством width.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;textarea&gt;&lt;/textarea&gt;</dt>
-              <dd>используется вместо элемента input type="text", когда нужно создать большие текстовые поля. Текст, отображаемый как исходное значение, помещается внутрь тега.</dd>
-              <dd>
-                <textarea placeholder="поле многострочного ввода инфо"></textarea>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;select&gt;&lt;/select&gt; и &lt;option&gt;&lt;/option&gt;</dt>
-              <dd>Списки дают возможность расположить большое количество пунктов компактно. Раскрывающиеся списки создаются при помощи элемента select. Они позволяют выбрать одно или несколько значений из предложенного множества. По умолчанию в поле списка отображается его первый элемент. Для добавления в список пунктов используются элементы option, которые располагаются внутри select.</dd>
-              <dd>
-                <select>
-                  <option>первое значение</option>
-                  <option>второе значение</option>
-                  <option>третье значение</option>
-                  <option>четвертое значение</option>
-                </select>
-              </dd>
-              <dd>
-                <select multiple>
-                  <option>первое значение</option>
-                  <option>второе значение</option>
-                  <option>третье значение</option>
-                  <option>четвертое значение</option>
-                </select>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;label&gt;&lt;/label&gt;</dt>
-              <dd>Надписи к элементам формы создаются с помощью элемента label. Существует два способа группировки надписи и поля. Если поле находится внутри элемента <label>, то атрибут for указывать не нужно.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;button&gt;&lt;/button&gt;</dt>
-              <dd>создает кликабельные кнопки. В отличие от кнопок, созданных input (input type="submit", input type="image", input type="reset", input type="button"), внутрь элемента button можно поместить контент — текст или изображение. Для корректного отображения элемента button разными браузерами нужно указывать атрибут type, например, button type="submit". Кнопки позволяют пользователям передавать данные в форму, очищать содержимое формы или предпринимать какие-либо другие действия. Можно создавать границы, изменять фон и выравнивать текст на кнопке.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример простой формы #1 (связка for - id)</dt>
-              <dd><img class="box__screen" src="./assets/imgs/form.jpg"></dd>
-              <dd><form action="/action_page.php" method="get">
-<label for="fname">Имя:</label>
-<input type="text" id="fname" name="fname">
-<label for="lname">Фамилия:</label>
-<input type="text" id="lname" name="lname">
-<input type="submit" value="Отправить">
-</form>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример простой формы #2 (связка по вложенности)</dt>
-              <dd><img class="box__screen" src="./assets/imgs/form2.jpg"></dd>
-              <dd><form action="/action_page.php" method="get">
-<label class="label">
-<span class="title">Имя:</span>
-<input type="text" name="fname">
-</label>
-<label class="label">
-<span class="title">Фамилия:</span>
-<input type="text" name="lname">
-</label>
-<input type="submit" value="Отправить">
-</form>
-              </dd>
+              <dt>Кроссбраузерность</dt>
+              <dd>это одинаковое отображение и работа сайта в различных браузерах. Если не задуматься над этим вопросом на этапе верстки, то, создав сайт, вы увидите, что в разных браузерах он отображается по-разному и не везде корректно.</dd>
+              <dd>Откуда возникла такая проблема? Дело в том, что браузеры используют разные движки. Браузерный движок занимается загрузкой, обработкой, отображением и расчетами данных. И хоть сегодня существует большое количество различных браузеров, если мы их разложим по используемым движкам, то увидим, что этих движков не так и много, так как создание своего движка является очень трудоемкой задачей.</dd>
             </dl>
           </div>
           <div class="box">
-            <h2 class="box__h2">#2 Группировка элементов формы</h2>
+            <h2 class="box__h2">#2 Основные движки</h2>
             <dl class="box__term">
-              <dt>&lt;fieldset&gt;&lt;/fieldset&gt;</dt>
-              <dd>предназначен для группировки элементов, связанных друг с другом, разделяя таким образом форму на логические фрагменты.</dd>
+              <dt>Blink</dt>
+              <dd>принадлежит компании Google, имеет открытый исходный код, входит в состав проекта Chromium. Используют браузеры: Chrome, Opera, Яндекс.Браузер, Vivaldi и др. Над развитием этого движка работают многие крупные компании: Opera, Intel, IBM, Yandex, Vivaldi и другие.</dd>
             </dl>
             <dl class="box__term">
-              <dt>&lt;legend&gt;&lt;/legend&gt;</dt>
-              <dd>определяет заголовок для элемента fieldset</dd>
-              <dd><img class="box__screen" src="./assets/imgs/form3.jpg"></dd>
-              <dd><form action="/action_page.php">
-<fieldset>
-<legend>Личные данные:</legend>
-<label for="fname">Имя:</label>
-<input type="text" id="fname" name="fname"><br>
-<label for="lname">Фамилия:</label>
-<input type="text" id="lname" name="lname"><br>
-<label for="email">Email:</label>
-<input type="email" id="email" name="email"><br>
-<label for="birthday">День рождения:</label>
-<input type="date" id="birthday" name="birthday"><br>
-<input type="submit" value="Отправить">
-</fieldset>
-</form>
+              <dt>WebKit</dt>
+              <dd>принадлежит компании Apple, имеет открытый исходный код, используется в браузере Safari. Именно этот движок c 2008 г. по 2013 г. использовала компания Google в своем браузере Chrome.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>Gecko</dt>
+              <dd>принадлежит компании Mozilla, имеет открытый исходный код, используется в браузерах Firefox и Tor Browser.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>EdgeHTML</dt>
+              <dd>принадлежит компании Microsoft, имеет закрытый исходный код, используется в браузере Edge. Пришел на смену движку Trident (использовался в Internet Explorer), с запуском Windows 10, и работает только на этой операционной системе. 15 января 2020 года Microsoft выпустило обновление для браузера Edge (Microsoft Edge 79 stable), в котором перешла на Chromium с браузерным движком Blink.</dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#3 Префиксы</h2>
+            <dl class="box__term">
+              <dt>Префиксы браузеров:</dt>
+              <dd>если перед названием свойства стоит некоторый префикс, то это означает, что данное свойство реализовано и будет применяться исключительно в указанном браузере. Все остальные браузеры данное свойство будут игнорировать, т.к. для них данный префикс неизвестен.</dd>
+              <dd>
+                <ul class="box__list">
+                  <li>-moz- используется в Firefox;</li>
+                  <li>-ms- используется в Edge и Internet Explorer;</li>
+                  <li>-webkit- используется в Safari, Chrome и браузерах на основе движков WebKit и Blink;</li>
+                  <li>-o- используется в старых версиях браузера Opera, работающего на движке Presto.С 2013 г.Opera перешла на движок Blink.</li>
+                </ul>
+              </dd>
+            </dl>
+            <dl class="box__term">
+              <dt>Причины появления префиксов:</dt>
+              <dd>Для включения в браузер экспериментальных свойств CSS, которые стандартом ещё не утверждены. Таким образом, производители браузеров производят тестирование и вносят предложения перед утверждением свойств CSS в стандарте.</dd>
+              <dd>Для решения проблем с кроссбраузерностью.</dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#4 Fallback (резервный вариант)</h2>
+            <dl class="box__term">
+              <dt>Пример:</dt>
+              <dd><img class="box__screen" src="./assets/imgs/cross.jpg"></dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#5 Проверка поддержки свойства/метода</h2>
+            <dl class="box__term">
+              <dt>Ресурс для проверки:</dt>
+              <dd><span class="alert"><a href="https://caniuse.com/" target="_blank">https://caniuse.com/</a></span></dd>
+              <dd><img class="box__screen" src="./assets/imgs/cross1.jpg"></dd>
+              <dd>
+                <ul class="box__list">
+                  <li>Красный прямоугольник - браузер, в котором данное свойство не реализовано;</li>
+                  <li>Зелёный прямоугольник с дефисом, расположенным в правом верхнем углу – браузер, в котором данное свойство используется через префикс;</li>
+                  <li>Светло-зелёный прямоугольник – браузер, в котором данное свойство реализовано частично;</li>
+                  <li>Зелёный прямоугольник – браузер, в котором данное свойство реализовано в соответствии со стандартом.</li>
+                </ul>
               </dd>
             </dl>
           </div>
-          <form class="box" action="#">
-            <h2 class="box__h2">#3 Основные значения type для input</h2>
-            <ul class="box__list">
-              <li>
-                <p>type="text" - поле для ввода текстовой информации(значение по умолчанию)</p>
-                <p>
-                  <input type="text">
-                </p>
-              </li>
-              <li>
-                <p>type="email" - поле для ввода email</p>
-                <p>
-                  <input type="email">
-                </p>
-              </li>
-              <li>
-                <p>type="number" - поле для ввода цифр</p>
-                <p>
-                  <input type="number">
-                </p>
-              </li>
-              <li>
-                <p>type="password" - поле для ввода пароля</p>
-                <p>
-                  <input type="password">
-                </p>
-              </li>
-              <li>
-                <p>type="file" - поле для загрузки файлов</p>
-                <p>
-                  <input type="file">
-                </p>
-              </li>
-              <li>
-                <p>type="checkbox" - для группы полей этого типа - можно выбрать только несколько из группы</p>
-                <p>связка в группу по аттрибуту name c одинаковым значением</p>
-                <p>
-                  <input type="checkbox" name="t1">
-                  <input type="checkbox" name="t1">
-                  <input type="checkbox" name="t1">
-                  <input type="checkbox" name="t1">
-                </p>
-              </li>
-              <li>
-                <p>type="radio" - для группы полей этого типа - можно выбрать только один из группы</p>
-                <p>связка в группу по аттрибуту name c одинаковым значением</p>
-                <p>
-                  <input type="radio" name="t2">
-                  <input type="radio" name="t2">
-                  <input type="radio" name="t2">
-                  <input type="radio" name="t2">
-                </p>
-              </li>
-            </ul>
-            <p><span class="alert"><a href="https://www.w3schools.com/html/html_form_input_types.asp" target="_blank">расширенная инфо по всем типам input</a></span></p>
-          </form>
-          <form class="box" action="#">
-            <h2 class="box__h2">#4 Основные аттрибуты для input</h2>
-            <h3 class="box__h3">( Смотрим в инструментах разработчика)</h3>
-            <ul class="box__list">
-              <li>
-                <p>placeholder - задает короткую подсказку, описывающую ожидаемое значение элемента</p>
-                <p>
-                  <input type="text" placeholder="введите имя">
-                </p>
-              </li>
-              <li>
-                <p>value - задает значение элемента по умолчанию</p>
-                <p>
-                  <input type="text" value="Иван Иванов">
-                </p>
-              </li>
-              <li>
-                <p>name - используется для обращения к полю в JavaScript или на данные поля после отправки формы (обязательно для свзяки полей типа checkbox и radio в группу)</p>
-                <p>
-                  <input type="text" name="user_name">
-                </p>
-              </li>
-              <li>
-                <p>readonly - указывает, что поле ввода доступно только для чтения. Эл-т не редактируется, но отправляется при отправке формы, фокусится.</p>
-                <p>
-                  <input type="text" placeholder="введите имя" value="Иван Иванов" readonly>
-                </p>
-              </li>
-              <li>
-                <p>required - обязательное для заполнения поле, форма не будет отправлена пока поле не заполнено</p>
-                <p>
-                  <input type="text" placeholder="введите имя" required>
-                </p>
-              </li>
-              <li>
-                <p>checked - указывает, что элемент input должен быть предварительно выбран при загрузке страницы (для type="checkbox" или type="radio")</p>
-                <p>
-                  <input type="checkbox" name="t3">
-                  <input type="checkbox" name="t3" checked>
-                  <input type="checkbox" name="t3" checked>
-                  <input type="checkbox" name="t3">
-                </p>
-                <p>
-                  <input type="radio" name="t4">
-                  <input type="radio" name="t4">
-                  <input type="radio" name="t4" checked>
-                  <input type="radio" name="t4">
-                </p>
-              </li>
-              <li>
-                <p>disabled - указывает, что элемент input должен отключен. Эл-т не редактируется и не отправляется при отправке формы, не фокусится.</p>
-                <p>
-                  <input type="text" value="Иван Иванов" disabled>
-                </p>
-              </li>
-              <li>
-                <p>multiple - указывает, что пользователь может ввести более одного значения в элемент (например прикрепить несколько файлов в поле типа file, или для select)</p>
-                <p>
-                  <input type="file" multiple>
-                </p>
-              </li>
-            </ul>
-            <p><span class="alert"><a href="https://www.w3schools.com/tags/tag_input.asp" target="_blank">расширенная инфо по всем аттрибутам input</a></span></p>
-          </form>
+          <!--.box https://1ps.ru/blog/sites/2019/chto-takoe-krossbrauzernost-sajtov/
+          h2.box__h2 #6 CSS-хаки
+          dl.box__term
+              dt CSS-хаки
+              dd Это использование специальных свойств, понимаемых только определенными браузерами
+          -->
+          <!--.box https://1ps.ru/blog/sites/2019/chto-takoe-krossbrauzernost-sajtov/
+          h2.box__h2 #7 Разделение стилей для браузеров
+          dl.box__term
+              dt Разделение стилей для браузеров
+              dd
+          -->
         </div>
       </div>
       <footer class="footer">
