--- a/css_base.html
+++ b/css_base.html
@@ -33,20 +33,34 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="css_base.html">CSS base</a>
               </li>
+              <li class="nav__item"><a class="nav__link" href="css.html">CSS доп</a>
+              </li>
+              <li class="nav__item"><a class="nav__link" href="gradients.html">CSS градиенты</a>
+              </li>
+              <!--где-то здесь первая тестовая работа ДЗ-->
+              <!--+e('li').__item+e('a').__link.opacity(href="") Шрифты
+              -->
+              <!--+e('li').__item
+              +e('a').__link.opacity(href="") Изображения
+              // Теги. Форматы изображений. Оптимизация изображений
+              -->
               <li class="nav__item"><a class="nav__link" href="position.html">Position + z-index</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="css_selectors.html">CSS selectors</a>
               </li>
-              <li class="nav__item"><a class="nav__link" href="bem.html">БЭМ методология</a>
+              <!--+e('li').__item
+              +e('a').__link.opacity(href="") Git
+              //Система контроля версий. Публикация проекта на GitHub.
+              -->
+              <li class="nav__item"><a class="nav__link" href="flex.html">Flexboxes</a>
               </li>
-              <li class="nav__item"><a class="nav__link active" href="flex.html">Flexboxes</a>
+              <!--где-то здесь макет ДЗ №1 (html+css+flex)-->
+              <li class="nav__item"><a class="nav__link" href="bem.html">БЭМ методология</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="forms.html">Формы</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="adaptive.html">Адаптив(@media)/mobile first</a>
               </li>
-              <!--+e('li').__item+e('a').__link(href="") Bootstrap
-              -->
               <li class="nav__item"><a class="nav__link" href="gulp.html">Gulp</a>
               </li>
               <li class="nav__item"><a class="nav__link" href="gulp2.html">Работа с сборкой</a>
@@ -55,18 +69,24 @@
               </li>
               <li class="nav__item"><a class="nav__link" href="scss.html">SCSS</a>
               </li>
-              <!--+e('li').__item+e('a').__link(href="") SVG-спрайты
+              <!--где-то здесь макет ДЗ №2(pug+scss+flex+адаптив)-->
+              <!--+e('li').__item+e('a').__link.opacity(href="") Bootstrap
               -->
-              <!--+e('li').__item+e('a').__link(href="") Кроссбраузерность
-              -->
-              <!--+e('li').__item+e('a').__link(href="") Fallback
-              -->
-              <!--+e('li').__item+e('a').__link(href="") Grid
-              -->
-              <!--+e('li').__item+e('a').__link(href="") CSS-анимации
-              -->
-              <!--+e('li').__item+e('a').__link(href="") SVG-анимации
-              -->
+              <li class="nav__item"><a class="nav__link" href="crossbr.html">Кроссбраузерность</a>
+              </li>
+              <li class="nav__item"><a class="nav__link opacity" href="css_transition.html">CSS-transition</a>
+              </li>
+              <li class="nav__item"><a class="nav__link" href="css_transformation.html">CSS3-трансформации</a>
+              </li>
+              <li class="nav__item"><a class="nav__link opacity" href="css_animation.html">CSS3-анимации</a>
+              </li>
+              <li class="nav__item"><a class="nav__link opacity" href="">Работа с SVG</a>
+                <!--SVG-спрайты. SVG анимации.-->
+              </li>
+              <li class="nav__item"><a class="nav__link opacity" href="">Grid</a>
+              </li>
+              <!--где-то здесь макет ДЗ №3(pug+scss+flex+адаптив+bootstrap+grid)-->
+              <!--где-то здесь ДИПЛОМ-->
             </ul>
           </nav>
         </div>
@@ -76,8 +96,8 @@
           <div class="box">
             <h1 class="box__h1">CSS base</h1>
             <h2 class="box__h2">#0 Изменение типа элемента, свойство display</h2>
+            <h3 class="box__h3">Значения свойства</h3>
             <dl class="box__term">
-              <h3 class="box__h3">Значения свойства</h3>
               <dt>inline</dt>
               <dd>чтобы блочный элемент вел себя как inline-элемент (т. е. не переводился на новую строку).</dd>
             </dl>
