--- a/css_transformation.html
+++ b/css_transformation.html
@@ -7,7 +7,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <title>Формы</title>
+    <title>CSS3-трансформации</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -94,227 +94,127 @@
       <div class="main">
         <div class="container">
           <div class="box">
-            <h1 class="box__h1">Формы</h1>
-            <h2 class="box__h2">#1 Основы</h2>
+            <h1 class="box__h1">CSS3-трансформации</h1>
+            <h2 class="box__h2">#1 Основная инфо</h2>
             <dl class="box__term">
-              <dt>&lt;form action="#"&gt;&lt;/form&gt;</dt>
-              <dd>тег используется для создания формы HTML для ввода данных пользователя. Аттрибут action - определяет , куда посылать данные формы , когда форма была отправлена.</dd>
+              <dt>Для чего?</dt>
+              <dd>позволяет сдвигать, поворачивать и масштабировать элементы. Трансформации преобразовывают элемент, не затрагивая остальные элементы веб-страницы, т.е. другие элементы не сдвигаются относительно него.</dd>
             </dl>
             <dl class="box__term">
-              <dt>&lt;input&gt;&lt;/input&gt;</dt>
-              <dd>создает большинство полей формы. Атрибуты элемента отличаются в зависимости от типа поля, для создания которого используется этот элемент. С помощью css-стилей можно изменить размер шрифта, тип шрифта, цвет и другие свойства текста, а также добавить границы, цвет фона и фоновое изображение. Ширина поля задается свойством width.</dd>
+              <dt>Свойство transform</dt>
+              <dd>задаёт вид преобразования элемента. Свойство описывается с помощью функций трансформации, которые смещают элемент относительно его текущего положения на странице или изменяют его первоначальные размеры и форму.</dd>
             </dl>
             <dl class="box__term">
-              <dt>&lt;textarea&gt;&lt;/textarea&gt;</dt>
-              <dd>используется вместо элемента input type="text", когда нужно создать большие текстовые поля. Текст, отображаемый как исходное значение, помещается внутрь тега.</dd>
+              <dt>Свойство transform-origin</dt>
+              <dd>позволяет сместить центр трансформации, относительно которого происходит изменение положения/размера/формы элемента. Значение по умолчанию — center, или 50% 50%. Задаётся только для трансформированных элементов.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>Элементы которые могут быть трансформированы:</dt>
               <dd>
-                <textarea placeholder="поле многострочного ввода инфо"></textarea>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;select&gt;&lt;/select&gt; и &lt;option&gt;&lt;/option&gt;</dt>
-              <dd>Списки дают возможность расположить большое количество пунктов компактно. Раскрывающиеся списки создаются при помощи элемента select. Они позволяют выбрать одно или несколько значений из предложенного множества. По умолчанию в поле списка отображается его первый элемент. Для добавления в список пунктов используются элементы option, которые располагаются внутри select.</dd>
-              <dd>
-                <select>
-                  <option>первое значение</option>
-                  <option>второе значение</option>
-                  <option>третье значение</option>
-                  <option>четвертое значение</option>
-                </select>
-              </dd>
-              <dd>
-                <select multiple>
-                  <option>первое значение</option>
-                  <option>второе значение</option>
-                  <option>третье значение</option>
-                  <option>четвертое значение</option>
-                </select>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;label&gt;&lt;/label&gt;</dt>
-              <dd>Надписи к элементам формы создаются с помощью элемента label. Существует два способа группировки надписи и поля. Если поле находится внутри элемента <label>, то атрибут for указывать не нужно.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>&lt;button&gt;&lt;/button&gt;</dt>
-              <dd>создает кликабельные кнопки. В отличие от кнопок, созданных input (input type="submit", input type="image", input type="reset", input type="button"), внутрь элемента button можно поместить контент — текст или изображение. Для корректного отображения элемента button разными браузерами нужно указывать атрибут type, например, button type="submit". Кнопки позволяют пользователям передавать данные в форму, очищать содержимое формы или предпринимать какие-либо другие действия. Можно создавать границы, изменять фон и выравнивать текст на кнопке.</dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример простой формы #1 (связка for - id)</dt>
-              <dd><img class="box__screen" src="./assets/imgs/form.jpg"></dd>
-              <dd><form action="/action_page.php" method="get">
-<label for="fname">Имя:</label>
-<input type="text" id="fname" name="fname">
-<label for="lname">Фамилия:</label>
-<input type="text" id="lname" name="lname">
-<input type="submit" value="Отправить">
-</form>
-              </dd>
-            </dl>
-            <dl class="box__term">
-              <dt>Пример простой формы #2 (связка по вложенности)</dt>
-              <dd><img class="box__screen" src="./assets/imgs/form2.jpg"></dd>
-              <dd><form action="/action_page.php" method="get">
-<label class="label">
-<span class="title">Имя:</span>
-<input type="text" name="fname">
-</label>
-<label class="label">
-<span class="title">Фамилия:</span>
-<input type="text" name="lname">
-</label>
-<input type="submit" value="Отправить">
-</form>
+                <ul class="box__list">
+                  <li>display: block;</li>
+                  <li>display: inline-block;</li>
+                  <li>display: table-row;</li>
+                  <li>display: table-row-group;</li>
+                  <li>display: table-header-group;</li>
+                  <li>display: table-footer-group;</li>
+                  <li>display: table-cell;</li>
+                  <li>display: table-caption;</li>
+                </ul>
               </dd>
             </dl>
           </div>
           <div class="box">
-            <h2 class="box__h2">#2 Группировка элементов формы</h2>
+            <h2 class="box__h2">#2 Виды CSS3-трансформаций</h2>
             <dl class="box__term">
-              <dt>&lt;fieldset&gt;&lt;/fieldset&gt;</dt>
-              <dd>предназначен для группировки элементов, связанных друг с другом, разделяя таким образом форму на логические фрагменты.</dd>
+              <dt>2D-трансформации</dt>
+              <dd>преобразовывают элементы в двумерном пространстве c помощью 2D-матрицы преобразований. Эта матрица применяется для вычисления новых координат объекта, на основе значений свойств transform и transform-origin. Преобразования влияют только на визуальный рендеринг. В отношении макета страницы они могут отразиться на переполнении содержимого блока. По умолчанию точка трансформации находится в центре элемента.</dd>
             </dl>
             <dl class="box__term">
-              <dt>&lt;legend&gt;&lt;/legend&gt;</dt>
-              <dd>определяет заголовок для элемента fieldset</dd>
-              <dd><img class="box__screen" src="./assets/imgs/form3.jpg"></dd>
-              <dd><form action="/action_page.php">
-<fieldset>
-<legend>Личные данные:</legend>
-<label for="fname">Имя:</label>
-<input type="text" id="fname" name="fname"><br>
-<label for="lname">Фамилия:</label>
-<input type="text" id="lname" name="lname"><br>
-<label for="email">Email:</label>
-<input type="email" id="email" name="email"><br>
-<label for="birthday">День рождения:</label>
-<input type="date" id="birthday" name="birthday"><br>
-<input type="submit" value="Отправить">
-</fieldset>
-</form>
-              </dd>
+              <dt>3D-трансформации</dt>
+              <dd>расширяет спецификацию CSS 2D Transforms, позволяя преобразовывать элементы в трехмерном пространстве. Новые функции преобразования для свойства transform выполняют трехмерные преобразования, расширяя координатное пространство до трех измерений, добавляя ось Z, перпендикулярную плоскости экрана, которая увеличивается по направлению к зрителю, а дополнительные свойства позволяют контролировать взаимодействие вложенных трехмерных преобразованных элементов.</dd>
             </dl>
           </div>
-          <form class="box" action="#">
-            <h2 class="box__h2">#3 Основные значения type для input</h2>
-            <ul class="box__list">
-              <li>
-                <p>type="text" - поле для ввода текстовой информации(значение по умолчанию)</p>
-                <p>
-                  <input type="text">
-                </p>
-              </li>
-              <li>
-                <p>type="email" - поле для ввода email</p>
-                <p>
-                  <input type="email">
-                </p>
-              </li>
-              <li>
-                <p>type="number" - поле для ввода цифр</p>
-                <p>
-                  <input type="number">
-                </p>
-              </li>
-              <li>
-                <p>type="password" - поле для ввода пароля</p>
-                <p>
-                  <input type="password">
-                </p>
-              </li>
-              <li>
-                <p>type="file" - поле для загрузки файлов</p>
-                <p>
-                  <input type="file">
-                </p>
-              </li>
-              <li>
-                <p>type="checkbox" - для группы полей этого типа - можно выбрать только несколько из группы</p>
-                <p>связка в группу по аттрибуту name c одинаковым значением</p>
-                <p>
-                  <input type="checkbox" name="t1">
-                  <input type="checkbox" name="t1">
-                  <input type="checkbox" name="t1">
-                  <input type="checkbox" name="t1">
-                </p>
-              </li>
-              <li>
-                <p>type="radio" - для группы полей этого типа - можно выбрать только один из группы</p>
-                <p>связка в группу по аттрибуту name c одинаковым значением</p>
-                <p>
-                  <input type="radio" name="t2">
-                  <input type="radio" name="t2">
-                  <input type="radio" name="t2">
-                  <input type="radio" name="t2">
-                </p>
-              </li>
-            </ul>
-            <p><span class="alert"><a href="https://www.w3schools.com/html/html_form_input_types.asp" target="_blank">расширенная инфо по всем типам input</a></span></p>
-          </form>
-          <form class="box" action="#">
-            <h2 class="box__h2">#4 Основные аттрибуты для input</h2>
-            <h3 class="box__h3">( Смотрим в инструментах разработчика)</h3>
-            <ul class="box__list">
-              <li>
-                <p>placeholder - задает короткую подсказку, описывающую ожидаемое значение элемента</p>
-                <p>
-                  <input type="text" placeholder="введите имя">
-                </p>
-              </li>
-              <li>
-                <p>value - задает значение элемента по умолчанию</p>
-                <p>
-                  <input type="text" value="Иван Иванов">
-                </p>
-              </li>
-              <li>
-                <p>name - используется для обращения к полю в JavaScript или на данные поля после отправки формы (обязательно для свзяки полей типа checkbox и radio в группу)</p>
-                <p>
-                  <input type="text" name="user_name">
-                </p>
-              </li>
-              <li>
-                <p>readonly - указывает, что поле ввода доступно только для чтения. Эл-т не редактируется, но отправляется при отправке формы, фокусится.</p>
-                <p>
-                  <input type="text" placeholder="введите имя" value="Иван Иванов" readonly>
-                </p>
-              </li>
-              <li>
-                <p>required - обязательное для заполнения поле, форма не будет отправлена пока поле не заполнено</p>
-                <p>
-                  <input type="text" placeholder="введите имя" required>
-                </p>
-              </li>
-              <li>
-                <p>checked - указывает, что элемент input должен быть предварительно выбран при загрузке страницы (для type="checkbox" или type="radio")</p>
-                <p>
-                  <input type="checkbox" name="t3">
-                  <input type="checkbox" name="t3" checked>
-                  <input type="checkbox" name="t3" checked>
-                  <input type="checkbox" name="t3">
-                </p>
-                <p>
-                  <input type="radio" name="t4">
-                  <input type="radio" name="t4">
-                  <input type="radio" name="t4" checked>
-                  <input type="radio" name="t4">
-                </p>
-              </li>
-              <li>
-                <p>disabled - указывает, что элемент input должен отключен. Эл-т не редактируется и не отправляется при отправке формы, не фокусится.</p>
-                <p>
-                  <input type="text" value="Иван Иванов" disabled>
-                </p>
-              </li>
-              <li>
-                <p>multiple - указывает, что пользователь может ввести более одного значения в элемент (например прикрепить несколько файлов в поле типа file, или для select)</p>
-                <p>
-                  <input type="file" multiple>
-                </p>
-              </li>
-            </ul>
-            <p><span class="alert"><a href="https://www.w3schools.com/tags/tag_input.asp" target="_blank">расширенная инфо по всем аттрибутам input</a></span></p>
-          </form>
+          <div class="box">
+            <h2 class="box__h2">#3 2D-трансформации, возможные значения</h2>
+            <dl class="box__term">
+              <dt>transform: none</dt>
+              <dd>значение по умолчанию, означает отсутствие трансформации. Также отменяет трансформацию для элемента из группы трансформируемых элементов.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform: initial</dt>
+              <dd>Устанавливает значение свойства в значение по умолчанию.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform: inherit</dt>
+              <dd>Наследует значение свойства от родительского элемента.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform: translate()</dt>
+              <dd>Функция translate(x,y) / translateX(n) / translateY(n)</dd>
+              <dd>Сдвигает элемент на новое место, перемещая относительно обычного положения вправо и вниз, используя координаты X и Y, не затрагивая при этом соседние элементы. Если нужно сдвинуть элемент влево или вверх, то нужно использовать отрицательные значения.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform: scale()</dt>
+              <dd>Функция scale(x,y) / scaleX(n) / scaleY(n)</dd>
+              <dd>Масштабирует элементы, делая их больше или меньше. Значения от 0 до 1 уменьшают элемент. Первое значение масштабирует элемент по ширине, второе — по высоте. Отрицательные значения отображают элемент зеркально.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform: rotate()</dt>
+              <dd>Функция rotate(угол)</dd>
+              <dd>Поворачивает элементы на заданное количество градусов, отрицательные значения от -1deg до -360deg поворачивают элемент против часовой стрелки, положительные — по часовой стрелке. Значение rotate(720deg) поворачивает элемент на два полных оборота.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform: skew()</dt>
+              <dd>Функция skew(x-угол,y-угол) / skewX(угол) / skewY(угол)</dd>
+              <dd>Используется для деформирования (искажения) сторон элемента относительно координатных осей. Если указано одно значение, второе будет определено браузером автоматически.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform: matrix()</dt>
+              <dd>Функция matrix(a, c, b, d, x, y)</dd>
+              <dd>Смещает элементы и задает способ их трансформации, позволяя объединить несколько функций 2D-трансформаций в одной. В качестве трансформации допустимы поворот, масштабирование, наклон и изменение положения.</dd>
+              <dd>Значение a изменяет масштаб по горизонтали. Значение от 0 до 1 уменьшает элемент, больше 1 — увеличивает.</dd>
+              <dd>Значение c деформирует (сдвигает) стороны элемента по оси Y, положительное значение — вверх, отрицательное — вниз.</dd>
+              <dd>Значение b деформирует (сдвигает) стороны элемента по оси X, положительное значение — влево, отрицательное — вправо.</dd>
+              <dd>Значение d изменяет масштаб по вертикали. Значение меньше 1 уменьшает элемент, больше 1 — увеличивает.</dd>
+              <dd>Значение x смещает элемент по оси X, положительное — вправо, отрицательное — влево.</dd>
+              <dd>Значение y смещает элемент по оси Y, положительное значение — вниз, отрицательное — вверх.</dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#4 Примеры transform</h2>
+            <p><span class="alert"><a href="https://codepen.io/nazarelen/pen/EaNbLX" target="_blank">Примеры</a></span></p>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#5 2D-трансформации, возможные значения transform-origin</h2>
+            <dl class="box__term">
+              <dt>transform-origin: initial</dt>
+              <dd>Устанавливает значение свойства в значение по умолчанию.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform-origin: inherit</dt>
+              <dd>Наследует значение свойства от родительского элемента.</dd>
+            </dl>
+            <dl class="box__term">
+              <dt>transform-origin: ось Х(left, center, right, длина, %) ось Y(top, center, bottom, длина, %)</dt>
+              <dd>Пара значений, заданная с помощью ключевых слов, единиц длины или процентов определяет, относительно какой части элемента будет происходить трансформация. Значения больше 100% увеличивают область трансформации элемента.</dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#6 Примеры transform-origin + анимации...</h2>
+            <p><span class="alert"><a href="https://codepen.io/nazarelen/pen/aNQNva" target="_blank">Примеры</a></span></p>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#7 Множественные трансформации</h2>
+            <dl class="box__term">
+              <dt>transform: scale(1.5) rotate(-10deg);</dt>
+              <dd>Можно объединить несколько трансформаций одного элемента, перечислив их через пробел в порядке проявления.</dd>
+            </dl>
+          </div>
+          <div class="box">
+            <h2 class="box__h2">#8 Трансформации на практике: как сделать ленточки</h2>
+            <p><span class="alert"><a href="https://codepen.io/nazarelen/pen/BKGZPP" target="_blank">Примеры</a></span></p>
+          </div>
         </div>
       </div>
       <footer class="footer">
